study tasks solution

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,67 +1,2 @@
-/* common */
-* {
-  box-sizing: border-box;
-}
 
-
-body {
-  background-color: #fff;
-  color: #333;
-  font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-  padding: 0;
-  margin: 0;
-}
-
-
-button {
-  cursor: pointer;
-}
-
-
-section {
-  padding: 50px 0;
-  text-align: center;
-}
-
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-
-
-.container {
-  width: 900px;
-  margin: 0 auto;
-  padding: 0px 40px;
-  background-color: aqua;
-}
-/*list*/
-.list{
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-}
-
-
-.item{
-  background-color: rgb(155, 245, 245);
-  color: blue;
-  font-weight: 400;
-  border: 2px solid blue;
-  border-radius: 4px;
-  margin-bottom: 4px;
-}
-
-.title{
-  font-size: 24px;
-  padding-left: 50px;
-
-}
-.paragraph{
-  font-size: 16px;
-  padding-left: 10px;
-}
-
+@import url(../css/lesson-1.css);
