--- a/src/css/lesson-2.css
+++ b/src/css/lesson-2.css
@@ -5,7 +5,7 @@
 
 
 body {
-  background-color: #fff;
+  background-color: #80e2e9;
   color: #333;
   font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
   padding: 0;
